Remove MSVC precompiled header

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,68 @@ _ReSharper*/
 .vs/
 #Nuget packages folder
 packages/
+/TestModule/idl/
+/TestModule/idl/DbConnect_s.h
+/TestModule/idl/DbConnect.cpp
+/TestModule/idl/DbConnect.h
+/TestModule/idl/PingPong_p.cpp
+/TestModule/idl/PingPong_s.h
+/TestModule/idl/PingPong.cpp
+/TestModule/idl/PingPong.h
+/TestModule/idl/RecursiveStruct_p.cpp
+/TestModule/idl/RecursiveStruct_s.h
+/TestModule/idl/RecursiveStruct.cpp
+/TestModule/idl/RecursiveStruct.h
+/TestModule/idl/Test_A1_p.cpp
+/TestModule/idl/Test_A1_s.h
+/TestModule/idl/Test_A1.cpp
+/TestModule/idl/Test_A1.h
+/TestModule/idl/Test_AVT_p.cpp
+/TestModule/idl/Test_AVT_s.h
+/TestModule/idl/Test_AVT.cpp
+/TestModule/idl/Test_AVT.h
+/TestModule/idl/Test_Comp_p.cpp
+/TestModule/idl/Test_Comp_s.h
+/TestModule/idl/Test_Comp.cpp
+/TestModule/idl/Test_Comp.h
+/TestModule/idl/Test_I1_factory_p.cpp
+/TestModule/idl/Test_I1_factory_s.h
+/TestModule/idl/Test_I1_factory.cpp
+/TestModule/idl/Test_I1_factory.h
+/TestModule/idl/Test_I1_p.cpp
+/TestModule/idl/Test_I1_s.h
+/TestModule/idl/Test_I1.cpp
+/TestModule/idl/Test_I1.h
+/TestModule/idl/Test_I2_p.cpp
+/TestModule/idl/Test_I2_s.h
+/TestModule/idl/Test_I2.cpp
+/TestModule/idl/Test_I2.h
+/TestModule/idl/Test_I3_factory_p.cpp
+/TestModule/idl/Test_I3_factory_s.h
+/TestModule/idl/Test_I3_factory.cpp
+/TestModule/idl/Test_I3_factory.h
+/TestModule/idl/Test_I3_p.cpp
+/TestModule/idl/Test_I3_s.h
+/TestModule/idl/Test_I3.cpp
+/TestModule/idl/Test_I3.h
+/TestModule/idl/Test_V1_p.cpp
+/TestModule/idl/Test_V1_s.h
+/TestModule/idl/Test_V1.cpp
+/TestModule/idl/Test_V1.h
+/TestModule/idl/Test_V2_p.cpp
+/TestModule/idl/Test_V2_s.h
+/TestModule/idl/Test_V2.cpp
+/TestModule/idl/Test_V2.h
+/TestModule/idl/Test_V3_p.cpp
+/TestModule/idl/Test_V3_s.h
+/TestModule/idl/Test_V3.cpp
+/TestModule/idl/Test_V3.h
+/TestModule/idl/Union_p.cpp
+/TestModule/idl/Union_s.h
+/TestModule/idl/Union.cpp
+/TestModule/idl/Union.h
+/TestModule/idl/ValueBox_p.cpp
+/TestModule/idl/ValueBox_s.h
+/TestModule/idl/ValueBox.cpp
+/TestModule/idl/ValueBox.h
+/TestProcess/idl/
