--- a/TestFixed/TestFixed.vcxproj.filters
+++ b/TestFixed/TestFixed.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="..\TestORB\TestFixed\TestFixed.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\TestORB\TestFixed\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
