--- a/TestModule/TestModule.vcxproj
+++ b/TestModule/TestModule.vcxproj
@@ -1060,7 +1060,7 @@
       <EnableCOMDATFolding>false</EnableCOMDATFolding>
     </Link>
     <PostBuildEvent>
-      <Command>"$(TargetDir)Nirvana.exe" -s -c Nirvana/pacman reg-bin "$(TargetPath)"</Command>
+      <Command>"$(TargetDir)..\Nirvana.exe" -s -c Nirvana/pacman reg-bin "$(TargetPath)"</Command>
       <Message>Registering...</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -1095,7 +1095,7 @@
       <EnableCOMDATFolding>false</EnableCOMDATFolding>
     </Link>
     <PostBuildEvent>
-      <Command>"$(TargetDir)Nirvana.exe" -s -c Nirvana/pacman reg-bin "$(TargetPath)"</Command>
+      <Command>"$(TargetDir)..\Nirvana.exe" -s -c Nirvana/pacman reg-bin "$(TargetPath)"</Command>
       <Message>Registering...</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -1129,7 +1129,7 @@
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
     </Link>
     <PostBuildEvent>
-      <Command>"$(TargetDir)Nirvana.exe" -s -c Nirvana/pacman reg-bin "$(TargetPath)"</Command>
+      <Command>"$(TargetDir)..\Nirvana.exe" -s -c Nirvana/pacman reg-bin "$(TargetPath)"</Command>
       <Message>Registering...</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -1164,7 +1164,7 @@
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
     </Link>
     <PostBuildEvent>
-      <Command>"$(TargetDir)Nirvana.exe" -s -c Nirvana/pacman reg-bin "$(TargetPath)"</Command>
+      <Command>"$(TargetDir)..\Nirvana.exe" -s -c Nirvana/pacman reg-bin "$(TargetPath)"</Command>
       <Message>Registering...</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
