--- a/TestSystem/TestSystem.vcxproj.filters
+++ b/TestSystem/TestSystem.vcxproj.filters
@@ -39,5 +39,8 @@
     <ClCompile Include="..\TestORB\TestSystem\TestSQLite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\TestORB\TestSystem\TestShell.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
